--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 							<td></td>
 						</tr>
 						<tr>
-							<th>Yossi Pratama</th>
+							<th>Muhammad Affanzi</th>
 							<td></td>
 						</tr>
 						<tr>
